--- a/packages/libs/minicss/package.json
+++ b/packages/libs/minicss/package.json
@@ -19,7 +19,7 @@
   "files": [
     "lib"
   ],
-  "homepage": "https://github.com/Tinkoff/tramvai",
+  "homepage": "https://github.com/tramvaijs/tramvai",
   "repository": {
     "type": "git",
     "url": "git@github.com:Tinkoff/tramvai.git"
