--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,7 +23,7 @@
   "bugs": {
     "url": "https://tinkoff.slack.com/archives/CHF0KE8TX"
   },
-  "homepage": "https://github.com/Tinkoff/tramvai",
+  "homepage": "https://github.com/tramvaijs/tramvai",
   "repository": {
     "type": "git",
     "url": "git@github.com:Tinkoff/tramvai.git"
@@ -182,7 +182,6 @@
     "@types/resolve": "^1.20.2",
     "@types/rimraf": "^3.0.2",
     "@types/semver": "^7.3.12",
-    "@types/sharp": "^0.32.0",
     "@types/stoppable": "^1.1.1",
     "@types/svgo": "^1.3.6",
     "@types/universal-analytics": "^0.4.5",
