--- a/packages/libs/browserslist-config/package.json
+++ b/packages/libs/browserslist-config/package.json
@@ -9,7 +9,7 @@
     "index.js",
     "index.d.ts"
   ],
-  "homepage": "https://github.com/Tinkoff/tramvai",
+  "homepage": "https://github.com/tramvaijs/tramvai",
   "repository": {
     "type": "git",
     "url": "git@github.com:Tinkoff/tramvai.git"
