--- a/packages/libs/prettier/package.json
+++ b/packages/libs/prettier/package.json
@@ -18,7 +18,7 @@
   "files": [
     "lib"
   ],
-  "homepage": "https://github.com/Tinkoff/tramvai",
+  "homepage": "https://github.com/tramvaijs/tramvai",
   "repository": {
     "type": "git",
     "url": "git@github.com:Tinkoff/tramvai.git"
