--- a/packages/modules/server/tsconfig.json
+++ b/packages/modules/server/tsconfig.json
@@ -68,6 +68,9 @@
         },
         {
             "path": "../../tramvai/react"
+        },
+        {
+            "path": "../../libs/safe-strings"
         }
     ]
 }
