--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -143,6 +143,7 @@
     "resolve": "^1.22.4",
     "rimraf": "^3.0.2",
     "semver": "^7.3.7",
+    "source-map": "^0.7.4",
     "source-map-loader": "^4.0.0",
     "spark-md5": "^3.0.2",
     "stoppable": "^1.1.0",
@@ -158,6 +159,7 @@
     "validate-npm-package-name": "^3.0.0",
     "wait-on": "^5.3.0",
     "webpack": "5.87.0",
+    "webpack-sources": "^3.2.3",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-chain": "^6.5.1",
     "webpack-dev-middleware": "^6.1.1",
