--- a/packages/modules/common/package.json
+++ b/packages/modules/common/package.json
@@ -10,6 +10,7 @@
   ],
   "browser": {
     "./lib/actions/actionPageRunner.js": "./lib/actions/actionPageRunner.browser.js",
+    "./lib/actions/deferred/providers.js": "./lib/actions/deferred/providers.browser.js",
     "./lib/cache/serverProviders.js": "./lib/cache/clientProviders.js",
     "./lib/cache/cacheFactory.js": "./lib/cache/cacheFactory.browser.js",
     "./lib/index.es.js": "./lib/index.browser.js",
@@ -34,6 +35,7 @@
     "@akashbabu/lfu-cache": "1.0.2",
     "@tinkoff/pubsub": "0.0.0-stub",
     "@tinkoff/url": "0.0.0-stub",
+    "@tramvai/safe-strings": "0.0.0-stub",
     "@tramvai/experiments": "0.0.0-stub",
     "@tramvai/module-cookie": "0.0.0-stub",
     "@tramvai/module-environment": "0.0.0-stub",
