--- a/packages/modules/common/tsconfig.json
+++ b/packages/modules/common/tsconfig.json
@@ -72,6 +72,9 @@
         },
         {
             "path": "../../tokens/core-private"
+        },
+        {
+            "path": "../../libs/safe-strings"
         }
     ]
 }
