--- a/packages/modules/router/package.json
+++ b/packages/modules/router/package.json
@@ -29,6 +29,7 @@
     "@tinkoff/router": "0.0.0-stub",
     "@tinkoff/url": "0.0.0-stub",
     "@tramvai/react": "0.0.0-stub",
+    "@tramvai/safe-strings": "0.0.0-stub",
     "@tramvai/tokens-child-app": "0.0.0-stub",
     "@tramvai/tokens-render": "0.0.0-stub",
     "@tramvai/tokens-router": "0.0.0-stub",
