--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "composite": true,
+    "declarationMap": true,
     "module": "ESNext",
     "allowJs": true,
     "types": [
