--- a/tools/docSite/src/components/DocsRating/package.json
+++ b/tools/docSite/src/components/DocsRating/package.json
@@ -13,7 +13,7 @@
     "react": "*"
   },
   "devDependencies": {
-    "typescript": "4.9.3"
+    "typescript": "~5.1.0"
   },
   "repository": {
     "type": "git",
