--- a/packages/modules/server/tsconfig.json
+++ b/packages/modules/server/tsconfig.json
@@ -71,6 +71,9 @@
         },
         {
             "path": "../../libs/safe-strings"
+        },
+        {
+            "path": "../../tokens/router"
         }
     ]
 }
