--- a/packages/modules/server/package.json
+++ b/packages/modules/server/package.json
@@ -29,6 +29,7 @@
     "@tramvai/module-metrics": "0.0.0-stub",
     "@tramvai/papi": "0.0.0-stub",
     "@tramvai/tokens-server": "0.0.0-stub",
+    "@tramvai/tokens-router": "0.0.0-stub",
     "@tramvai/tokens-server-private": "0.0.0-stub",
     "@tramvai/safe-strings": "0.0.0-stub",
     "fastify": "^4.14.1",
