--- a/packages/modules/client-hints/tsconfig.json
+++ b/packages/modules/client-hints/tsconfig.json
@@ -42,6 +42,9 @@
         },
         {
             "path": "../metrics"
+        },
+        {
+            "path": "../../tokens/render"
         }
     ]
 }
