--- a/packages/modules/seo/tsconfig.json
+++ b/packages/modules/seo/tsconfig.json
@@ -36,6 +36,9 @@
         },
         {
             "path": "../../tokens/core-private"
+        },
+        {
+            "path": "../../tramvai/test/mocks"
         }
     ]
 }
