--- a/packages/libs/router/package.json
+++ b/packages/libs/router/package.json
@@ -27,6 +27,7 @@
     "use-sync-external-store": "^1.2.0"
   },
   "peerDependencies": {
+    "@tramvai/core": "0.0.0-stub",
     "react": ">=16.14.0",
     "tslib": "^2.4.0"
   },
