--- a/packages/tokens/common/package.json
+++ b/packages/tokens/common/package.json
@@ -18,11 +18,10 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@tinkoff/lru-cache-nano": "^7.8.1",
+    "@tinkoff/lru-cache-nano": "^7.9.0",
     "@tinkoff/url": "0.0.0-stub",
     "@tramvai/react": "0.0.0-stub",
-    "@tramvai/tokens-core": "0.0.0-stub",
-    "node-abort-controller": "^3.0.1"
+    "@tramvai/tokens-core": "0.0.0-stub"
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
