--- a/packages/modules/common/package.json
+++ b/packages/modules/common/package.json
@@ -17,7 +17,8 @@
     "./lib/providers/serverProviders.js": "./lib/providers/clientProviders.js",
     "./lib/child-app/serverProviders.js": "./lib/child-app/clientProviders.js",
     "./lib/requestManager/RequestManagerModule.js": "./lib/requestManager/RequestManagerModule.browser.js",
-    "./lib/responseManager/ResponseManagerModule.js": "./lib/responseManager/ResponseManagerModule.browser.js"
+    "./lib/responseManager/ResponseManagerModule.js": "./lib/responseManager/ResponseManagerModule.browser.js",
+    "./lib/async-local-storage/server.js": "./lib/async-local-storage/browser.js"
   },
   "sideEffects": false,
   "repository": {
