--- a/packages/tokens/server/package.json
+++ b/packages/tokens/server/package.json
@@ -18,7 +18,8 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@tramvai/papi": "0.0.0-stub"
+    "@tramvai/papi": "0.0.0-stub",
+    "@tramvai/safe-strings": "0.0.0-stub"
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
