--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -139,6 +139,7 @@
     "prettyoutput": "^1.2.0",
     "process": "^0.11.10",
     "promise-queue": "^2.2.5",
+    "proper-lockfile": "^4.1.2",
     "react-refresh": "^0.14.0",
     "resolve": "^1.22.4",
     "rimraf": "^3.0.2",
@@ -174,6 +175,7 @@
     "@swc/core": "1.3.62",
     "@tramvai/tools-generate-schema": "0.0.0-stub",
     "@types/compression": "^1.7.2",
+    "@types/detect-port": "^1.3.5",
     "@types/express": "^4.17.13",
     "@types/find-cache-dir": "^3.2.1",
     "@types/fs-extra": "^9.0.13",
@@ -181,6 +183,7 @@
     "@types/glob": "^7.2.0",
     "@types/http-proxy": "^1.17.9",
     "@types/inquirer": "^7.3.3",
+    "@types/proper-lockfile": "^4.1.4",
     "@types/resolve": "^1.20.2",
     "@types/rimraf": "^3.0.2",
     "@types/semver": "^7.3.12",
