--- a/examples/pwa/package.json
+++ b/examples/pwa/package.json
@@ -15,38 +15,36 @@
     "test:integration:watch": "jest --runInBand --watch --config ./jest.integration.config.js"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/jest": "^28.1.6",
     "@tramvai/cli": "0.0.0-stub",
     "@tramvai/test-integration": "0.0.0-stub",
     "@tramvai/test-integration-jest": "0.0.0-stub",
-    "postcss-custom-media": "^8.0.0",
-    "postcss-modules-values-replace": "^4.0.0",
-    "postcss-custom-properties": "^11.0.0",
-    "postcss-nested": "^5.0.5",
-    "sharp": "^0.32.1",
+    "@types/jest": "^28.1.6",
     "jest": "^29.0.2",
-    "jest-circus": "^29.0.2"
+    "jest-circus": "^29.0.2",
+    "postcss-custom-media": "^8.0.0",
+    "postcss-custom-properties": "^11.0.0",
+    "postcss-modules-values-replace": "^4.0.0",
+    "postcss-nested": "^5.0.5"
   },
   "dependencies": {
     "@tramvai/core": "0.0.0-stub",
-    "@tramvai/react": "0.0.0-stub",
-    "@tramvai/state": "0.0.0-stub",
-    "@tramvai/pwa-recipes": "0.0.0-stub",
     "@tramvai/module-common": "0.0.0-stub",
     "@tramvai/module-error-interceptor": "0.0.0-stub",
+    "@tramvai/module-page-render-mode": "0.0.0-stub",
+    "@tramvai/module-progressive-web-app": "0.0.0-stub",
     "@tramvai/module-render": "0.0.0-stub",
     "@tramvai/module-router": "0.0.0-stub",
     "@tramvai/module-seo": "0.0.0-stub",
     "@tramvai/module-server": "0.0.0-stub",
-    "@tramvai/module-page-render-mode": "0.0.0-stub",
-    "@tramvai/module-progressive-web-app": "0.0.0-stub",
+    "@tramvai/pwa-recipes": "0.0.0-stub",
+    "@tramvai/react": "0.0.0-stub",
+    "@tramvai/state": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-render": "0.0.0-stub",
     "@tramvai/tokens-router": "0.0.0-stub",
-    "workbox-core": "^6.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.0",
+    "workbox-core": "^6.6.1"
   }
 }
