--- a/packages/modules/seo/tsconfig.json
+++ b/packages/modules/seo/tsconfig.json
@@ -39,6 +39,9 @@
         },
         {
             "path": "../../tramvai/test/mocks"
+        },
+        {
+            "path": "../../tramvai/react"
         }
     ]
 }
