--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -119,6 +119,7 @@
     "less": "^3.13.1",
     "less-loader": "^8.1.1",
     "lightning-pool": "^2.4.0",
+    "loader-utils": "^3.2.1",
     "mdtable": "^0.3.1",
     "mini-css-extract-plugin": "2.7.6",
     "node-plop": "^0.26.0",
@@ -163,7 +164,7 @@
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-chain": "^6.5.1",
     "webpack-dev-middleware": "^6.1.1",
-    "webpack-hot-middleware": "^2.25.4",
+    "webpack-hot-middleware": "^2.26.0",
     "webpack-sources": "^3.2.3",
     "webpack-stats-plugin": "^1.1.3",
     "webpackbar": "^5.0.2",
