--- a/packages/tokens/child-app/package.json
+++ b/packages/tokens/child-app/package.json
@@ -24,6 +24,7 @@
     "@tramvai/core": "0.0.0-stub",
     "@tramvai/state": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
+    "@loadable/server": "*",
     "react": ">=16.14.0"
   },
   "module": "lib/index.es.js"
