--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -56,6 +56,7 @@
     "@discoveryjs/json-ext": "^0.5.7",
     "@fastify/compress": "^6.2.0",
     "@fastify/static": "^6.9.0",
+    "@loadable/webpack-plugin": "^5.15.0",
     "@module-federation/node": "^0.15.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@sentry/node": "^6.2.5",
