--- a/packages/modules/common/package.json
+++ b/packages/modules/common/package.json
@@ -45,6 +45,7 @@
     "@tramvai/tokens-core-private": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-render": "0.0.0-stub",
+    "@tramvai/tokens-router": "0.0.0-stub",
     "@tramvai/tokens-server-private": "0.0.0-stub",
     "@tramvai/types-actions-state-context": "0.0.0-stub",
     "hoist-non-react-statics": "^3.3.1",
