--- a/packages/modules/common/tsconfig.json
+++ b/packages/modules/common/tsconfig.json
@@ -75,6 +75,9 @@
         },
         {
             "path": "../../libs/safe-strings"
+        },
+        {
+            "path": "../../tokens/router"
         }
     ]
 }
