--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -196,11 +196,11 @@
     "@types/webpack-stats-plugin": "^0.3.2",
     "babel-plugin-tester": "^10.1.0",
     "react": "18.2.0",
-    "sharp": "^0.32.1"
+    "sharp": "0.32.6"
   },
   "hiddenDependencies": {
     "image-webpack-loader": "^6.0.0",
-    "sharp": "^0.32.1"
+    "sharp": "0.32.6"
   },
   "license": "Apache-2.0",
   "engines": {
