--- a/packages/libs/main-polyfills/package.json
+++ b/packages/libs/main-polyfills/package.json
@@ -20,11 +20,9 @@
     "abort-controller": "^3.0.0",
     "core-js": "^3.0.0",
     "css-vars-ponyfill": "^2.3.2",
-    "element-closest-polyfill": "^1.0.4",
     "intersection-observer": "^0.7.0",
     "resize-observer-polyfill": "^1.5.1",
-    "tslib": "^2.4.0",
-    "whatwg-fetch": "^3.0.0"
+    "tslib": "^2.4.0"
   },
   "module": "lib/index.es.js",
   "license": "Apache-2.0"
