--- a/packages/modules/child-app/package.json
+++ b/packages/modules/child-app/package.json
@@ -33,6 +33,7 @@
     "@tinkoff/env-validators": "0.0.0-stub",
     "@tinkoff/module-loader-client": "0.0.0-stub",
     "@tinkoff/module-loader-server": "0.0.0-stub",
+    "@tramvai/module-common": "0.0.0-stub",
     "@tinkoff/url": "0.0.0-stub",
     "@tramvai/child-app-core": "0.0.0-stub",
     "@tramvai/safe-strings": "0.0.0-stub",
