--- a/packages/modules/child-app/tsconfig.json
+++ b/packages/modules/child-app/tsconfig.json
@@ -54,6 +54,9 @@
         },
         {
             "path": "../../libs/router"
+        },
+        {
+            "path": "../common"
         }
     ]
 }
