--- a/packages/tokens/child-app/package.json
+++ b/packages/tokens/child-app/package.json
@@ -21,7 +21,9 @@
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
+    "@tinkoff/router": "0.0.0-stub",
     "@tramvai/core": "0.0.0-stub",
+    "@tramvai/react": "0.0.0-stub",
     "@tramvai/state": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@loadable/server": "*",
