--- a/packages/modules/micro-sentry/tsconfig.json
+++ b/packages/modules/micro-sentry/tsconfig.json
@@ -14,6 +14,9 @@
         },
         {
             "path": "../common"
+        },
+        {
+            "path": "../../tokens/render"
         }
     ]
 }
