--- a/tools/docSite/.npmrc
+++ b/tools/docSite/.npmrc
@@ -2,3 +2,5 @@ registry = https://registry.npmjs.org/
 strict-ssl = false
 ca = ''
 unsafe-perm = true
+yarn-offline-mirror = '.yarn-cache/'
+yarn-offline-mirror-pruning = true
