--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -69,6 +69,7 @@
     "@tinkoff/package-manager-wrapper": "0.0.0-stub",
     "@tinkoff/request-core": "^0.10.0",
     "@tinkoff/request-plugin-protocol-http": "^0.12.1",
+    "@tinkoff/request-plugin-retry": "^0.3.0",
     "@tinkoff/utils": "^2.1.3",
     "@tinkoff/webpack-dedupe-plugin": "0.0.0-stub",
     "@tramvai/build": "0.0.0-stub",
