--- a/tools/docSite/package.json
+++ b/tools/docSite/package.json
@@ -31,5 +31,11 @@
     "indent-string": "^4.0.0",
     "unist-util-visit": "^2.0.3"
   },
+  "resolutions": {
+    "@docusaurus/react-loadable": "5.5.2"
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "license": "Apache-2.0"
 }
