--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "devDependencies": {
     "@types/jest": "^29.0.2",
-    "@types/node": "^20.14.13",
+    "@types/node": "20.14.13",
     "@types/webpack-env": "^1.13.16",
     "expect-type": "^0.13.0",
     "typescript": "~5.1.0",
