--- a/packages/modules/common/package.json
+++ b/packages/modules/common/package.json
@@ -30,20 +30,21 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@akashbabu/lfu-cache": "1.0.2",
     "@tinkoff/errors": "0.0.0-stub",
     "@tinkoff/hook-runner": "0.0.0-stub",
     "@tinkoff/lru-cache-nano": "^7.9.0",
-    "@akashbabu/lfu-cache": "1.0.2",
     "@tinkoff/pubsub": "0.0.0-stub",
     "@tinkoff/url": "0.0.0-stub",
-    "@tramvai/safe-strings": "0.0.0-stub",
     "@tramvai/experiments": "0.0.0-stub",
     "@tramvai/module-cookie": "0.0.0-stub",
     "@tramvai/module-environment": "0.0.0-stub",
     "@tramvai/module-log": "0.0.0-stub",
+    "@tramvai/safe-strings": "0.0.0-stub",
     "@tramvai/tokens-child-app": "0.0.0-stub",
-    "@tramvai/tokens-core-private": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
+    "@tramvai/tokens-core-private": "0.0.0-stub",
+    "@tramvai/tokens-metrics": "0.0.0-stub",
     "@tramvai/tokens-render": "0.0.0-stub",
     "@tramvai/tokens-router": "0.0.0-stub",
     "@tramvai/tokens-server-private": "0.0.0-stub",
