--- a/packages/modules/common/tsconfig.json
+++ b/packages/modules/common/tsconfig.json
@@ -78,6 +78,9 @@
         },
         {
             "path": "../../tokens/router"
+        },
+        {
+            "path": "../../tokens/metrics"
         }
     ]
 }
