--- a/packages/modules/server/tsconfig.json
+++ b/packages/modules/server/tsconfig.json
@@ -11,7 +11,8 @@
         "types": [
             "node",
             "jest",
-            "webpack-env"
+            "webpack-env",
+            "@types/tramvai-monorepo"
         ]
     },
     "references": [
