--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -8,7 +8,8 @@
     "types": [
       "node",
       "jest",
-      "@types/jest"
+      "@types/jest",
+      "@types/tramvai-monorepo"
     ]
   },
   "exclude": [
