--- a/packages/modules/micro-sentry/tsconfig.json
+++ b/packages/modules/micro-sentry/tsconfig.json
@@ -17,6 +17,9 @@
         },
         {
             "path": "../../tokens/render"
+        },
+        {
+            "path": "../../libs/env-validators"
         }
     ]
 }
