--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -61,6 +61,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@sentry/node": "^6.2.5",
     "@svgr/webpack": "^8.1.0",
+    "@tinkoff/babel-plugin-lodash": "^0.1.0",
     "@tinkoff/browserslist-config": "0.0.0-stub",
     "@tinkoff/dippy": "0.0.0-stub",
     "@tinkoff/is-modern-lib": "0.0.0-stub",
@@ -81,7 +82,6 @@
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "babel-plugin-dynamic-import-node": "^2.3.3",
-    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-define": "^2.0.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "boxen": "^4.2.0",
