--- a/tools/monorepo/depscheck/src/__fixtures__/mismatchButSatisfieDeps/pkgB/package.json
+++ b/tools/monorepo/depscheck/src/__fixtures__/mismatchButSatisfieDeps/pkgB/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pkg-b",
+  "name": "mismatch-but-satisfies-deps-pkg-b",
   "version": "1.2.3",
   "dependencies": {
     "pkg-a": "^1.2.3"
