--- a/tools/docSite/package.json
+++ b/tools/docSite/package.json
@@ -7,8 +7,9 @@
     "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@docusaurus/remark-plugin-npm2yarn": "^2.3.1",
-    "@docusaurus/theme-common": "^2.3.1",
+    "@docusaurus/plugin-client-redirects": "2.3.1",
+    "@docusaurus/remark-plugin-npm2yarn": "2.3.1",
+    "@docusaurus/theme-common": "2.3.1",
     "@easyops-cn/docusaurus-search-local": "^0.21.4",
     "@tinkoff/utils": "^2.1.2",
     "clsx": "^1.1.1",
@@ -21,9 +22,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "*",
-    "@docusaurus/core": "^2.3.1",
-    "@docusaurus/plugin-google-analytics": "^2.3.1",
-    "@docusaurus/preset-classic": "^2.3.1",
+    "@docusaurus/core": "2.3.1",
+    "@docusaurus/plugin-google-analytics": "2.3.1",
+    "@docusaurus/preset-classic": "2.3.1",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
