--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "resolutions": {
     "webpack": "^5",
     "@types/webpack": "^5",
-    "@types/mime": "3.0.4"
+    "@types/mime": "3.0.4",
+    "@types/react": "^18.0.0"
   }
 }
