--- a/examples/child-app/package.json
+++ b/examples/child-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tramvai-test-app/child-app",
+  "name": "test-app-child-app",
   "version": "0.0.0-stub",
   "private": true,
   "description": "",
