--- a/packages/modules/child-app/package.json
+++ b/packages/modules/child-app/package.json
@@ -35,6 +35,7 @@
     "@tinkoff/module-loader-server": "0.0.0-stub",
     "@tramvai/module-common": "0.0.0-stub",
     "@tinkoff/url": "0.0.0-stub",
+    "@tinkoff/errors": "0.0.0-stub",
     "@tramvai/child-app-core": "0.0.0-stub",
     "@tramvai/safe-strings": "0.0.0-stub",
     "@tramvai/tokens-child-app": "0.0.0-stub"
