--- a/packages/modules/child-app/tsconfig.json
+++ b/packages/modules/child-app/tsconfig.json
@@ -57,6 +57,9 @@
         },
         {
             "path": "../common"
+        },
+        {
+            "path": "../../libs/errors"
         }
     ]
 }
