--- a/packages/tokens/core/package.json
+++ b/packages/tokens/core/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@tramvai/types-actions-state-context": "0.0.0-stub"
   },
+  "devDependencies": {
+    "@tinkoff/hook-runner": "0.0.0-stub"
+  },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
     "tslib": "^2.4.0"
