--- a/packages/tokens/server-private/package.json
+++ b/packages/tokens/server-private/package.json
@@ -22,7 +22,8 @@
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
-    "fastify": "^4.6.0",
+    "fastify": "^4.14.1",
+    "@fastify/cookie": "^8.3.0",
     "tslib": "^2.4.0"
   },
   "devDependencies": {},
