--- a/packages/modules/opentelemetry/tsconfig.json
+++ b/packages/modules/opentelemetry/tsconfig.json
@@ -32,6 +32,9 @@
         },
         {
             "path": "../../tokens/http-client"
+        },
+        {
+            "path": "../../tokens/router"
         }
     ]
 }
