--- a/packages/libs/router/tsconfig.json
+++ b/packages/libs/router/tsconfig.json
@@ -19,6 +19,9 @@
         },
         {
             "path": "../../tramvai/core"
+        },
+        {
+            "path": "../hooks"
         }
     ]
 }
