--- a/packages/tramvai/storybook-addon/package.json
+++ b/packages/tramvai/storybook-addon/package.json
@@ -20,26 +20,27 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@tramvai/test-mocks": "0.0.0-stub",
+    "@tanstack/react-query": "^4.7.1",
     "@tinkoff/is-modern-lib": "0.0.0-stub",
+    "@tramvai/test-mocks": "0.0.0-stub",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "webpack-chain": "^6.5.1",
-    "webpack-merge": "^5.8.0",
-    "@tanstack/react-query": "^4.7.1"
+    "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
-    "@types/webpack": ">=5.28",
     "@babel/core": "^7.16.0",
+    "@types/webpack": ">=5.28",
     "webpack": "5.87.0"
   },
   "peerDependencies": {
-    "@tramvai/cli": "0.0.0-stub",
-    "@tramvai/core": "0.0.0-stub",
-    "@tramvai/state": "0.0.0-stub",
-    "@tramvai/react": "0.0.0-stub",
-    "@tramvai/tokens-common": "0.0.0-stub",
     "@tinkoff/dippy": "0.0.0-stub",
     "@tinkoff/router": "0.0.0-stub",
     "@tinkoff/url": "0.0.0-stub",
+    "@tramvai/cli": "0.0.0-stub",
+    "@tramvai/core": "0.0.0-stub",
+    "@tramvai/react": "0.0.0-stub",
+    "@tramvai/state": "0.0.0-stub",
+    "@tramvai/tokens-common": "0.0.0-stub",
     "react": ">=16.14.0"
   }
 }
