--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -89,6 +89,7 @@
     "browserslist": "^4.21.3",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "chalk": "^4.1.2",
+    "chokidar": "^3.6.0",
     "commander": "^6.2.1",
     "compression": "^1.7.4",
     "core-js": "^3.0.0",
