--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpack": "^5",
     "@types/webpack": "^5",
     "@types/mime": "3.0.4",
-    "@types/react": "^18.0.0"
+    "@types/react": "^18.0.0",
+    "@types/express-serve-static-core": "^4.17.18"
   }
 }
