--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -83,6 +83,7 @@
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-polyfill-corejs3": "^0.11.1",
     "babel-plugin-transform-define": "^2.0.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "boxen": "^4.2.0",
@@ -92,7 +93,8 @@
     "chokidar": "^3.6.0",
     "commander": "^6.2.1",
     "compression": "^1.7.4",
-    "core-js": "^3.0.0",
+    "core-js": "3.40.0",
+    "core-js-compat": "3.40.0",
     "css-class-generator": "^2.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
