--- a/packages/libs/main-polyfills/package.json
+++ b/packages/libs/main-polyfills/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "abort-controller": "^3.0.0",
-    "core-js": "^3.0.0",
+    "core-js": "3.40.0",
     "css-vars-ponyfill": "^2.3.2",
     "intersection-observer": "^0.7.0",
     "resize-observer-polyfill": "^1.5.1",
