--- a/packages/modules/child-app/package.json
+++ b/packages/modules/child-app/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0-stub",
   "description": "Module for child apps",
   "browser": {
+    "./lib/server.es.js": "./lib/browser.js",
     "./lib/server.js": "./lib/browser.js",
-    "./lib/server/child/singletonProviders.js": "./lib/browser/child/singletonProviders.js",
     "./lib/server/child/providers.js": "./lib/browser/child/providers.js",
-    "./lib/shared/react/extractor.js": "./lib/shared/react/extractor.browser.js",
+    "./lib/server/child/singletonProviders.js": "./lib/browser/child/singletonProviders.js",
     "./lib/shared/child/extractorProviders.js": "./lib/shared/child/extractorProviders.browser.js",
-    "./lib/server.es.js": "./lib/browser.js"
+    "./lib/shared/react/extractor.js": "./lib/shared/react/extractor.browser.js"
   },
   "main": "lib/server.js",
   "typings": "lib/server.d.ts",
@@ -31,29 +31,28 @@
   "dependencies": {
     "@loadable/server": "^5.15.0",
     "@tinkoff/env-validators": "0.0.0-stub",
+    "@tinkoff/errors": "0.0.0-stub",
     "@tinkoff/module-loader-client": "0.0.0-stub",
     "@tinkoff/module-loader-server": "0.0.0-stub",
-    "@tramvai/module-common": "0.0.0-stub",
     "@tinkoff/url": "0.0.0-stub",
-    "@tinkoff/errors": "0.0.0-stub",
     "@tramvai/child-app-core": "0.0.0-stub",
+    "@tramvai/module-common": "0.0.0-stub",
     "@tramvai/safe-strings": "0.0.0-stub",
     "@tramvai/tokens-child-app": "0.0.0-stub"
   },
-  "devDependencies": {},
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
     "@tinkoff/router": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.2",
     "@tramvai/core": "0.0.0-stub",
-    "@tramvai/state": "0.0.0-stub",
     "@tramvai/react": "0.0.0-stub",
+    "@tramvai/state": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-render": "0.0.0-stub",
     "@tramvai/tokens-router": "0.0.0-stub",
+    "object-assign": "^4.1.1",
     "react": ">=16.14.0",
     "react-dom": ">=16.14.0",
-    "object-assign": "^4.1.1",
     "semver": "^7.3.8",
     "tslib": "^2.4.0"
   },
