--- a/packages/modules/opentelemetry/package.json
+++ b/packages/modules/opentelemetry/package.json
@@ -27,17 +27,16 @@
     "@opentelemetry/resources": "^1.28.0",
     "@opentelemetry/sdk-trace-node": "^1.28.0",
     "@opentelemetry/semantic-conventions": "^1.28.0",
-    "path-to-regexp": "0.1.7",
-    "@tramvai/tokens-common": "0.0.0-stub",
-    "@tramvai/tokens-metrics": "0.0.0-stub",
-    "@tramvai/tokens-http-client": "0.0.0-stub",
-    "@tramvai/tokens-server": "0.0.0-stub",
-    "@tramvai/tokens-router": "0.0.0-stub",
-    "@tramvai/tokens-server-private": "0.0.0-stub",
+    "@tinkoff/errors": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.2",
-    "@tinkoff/errors": "0.0.0-stub"
+    "@tramvai/tokens-common": "0.0.0-stub",
+    "@tramvai/tokens-http-client": "0.0.0-stub",
+    "@tramvai/tokens-metrics": "0.0.0-stub",
+    "@tramvai/tokens-router": "0.0.0-stub",
+    "@tramvai/tokens-server": "0.0.0-stub",
+    "@tramvai/tokens-server-private": "0.0.0-stub",
+    "path-to-regexp": "0.1.7"
   },
-  "devDependencies": {},
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
     "@tramvai/core": "0.0.0-stub",
