--- a/packages/modules/request-limiter/package.json
+++ b/packages/modules/request-limiter/package.json
@@ -24,11 +24,10 @@
   },
   "dependencies": {
     "@tinkoff/errors": "0.0.0-stub",
+    "@tramvai/tokens-metrics": "0.0.0-stub",
     "fastify-plugin": "^4.2.1",
-    "on-finished": "^2.3.0",
-    "@tramvai/tokens-metrics": "0.0.0-stub"
+    "on-finished": "^2.3.0"
   },
-  "devDependencies": {},
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
     "@tramvai/core": "0.0.0-stub",
