--- a/.github/workflows/test-smoke.yml
+++ b/.github/workflows/test-smoke.yml
@@ -29,7 +29,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Build
         run: yarn build
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install Playwright
         working-directory: smoke-bootstrap
-        run: yarn playwright install --with-deps
+        run: yarn playwright install
 
       - name: Build application
         working-directory: smoke-bootstrap
