--- a/packages/libs/router/package.json
+++ b/packages/libs/router/package.json
@@ -6,8 +6,8 @@
   "typings": "lib/index.d.ts",
   "module": "lib/index.es.js",
   "browser": {
-    "./lib/router/server.js": "./lib/router/browser.js",
-    "./lib/index.es.js": "./lib/index.browser.js"
+    "./lib/index.es.js": "./lib/index.browser.js",
+    "./lib/router/server.js": "./lib/router/browser.js"
   },
   "files": [
     "lib"
@@ -21,10 +21,10 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@tinkoff/hook-runner": "0.0.0-stub",
     "@tinkoff/react-hooks": "0.0.0-stub",
     "@tinkoff/url": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.2",
-    "@tinkoff/hook-runner": "0.0.0-stub",
     "use-sync-external-store": "^1.4.0"
   },
   "peerDependencies": {
