--- a/packages/modules/mocker/package.json
+++ b/packages/modules/mocker/package.json
@@ -23,12 +23,12 @@
     "tslib": "^2.4.0"
   },
   "peerDependencies": {
+    "@tinkoff/dippy": "0.0.0-stub",
     "@tramvai/core": "0.0.0-stub",
     "@tramvai/papi": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-server": "0.0.0-stub",
-    "@tramvai/tokens-server-private": "0.0.0-stub",
-    "@tinkoff/dippy": "0.0.0-stub"
+    "@tramvai/tokens-server-private": "0.0.0-stub"
   },
   "license": "Apache-2.0"
 }
