--- a/packages/modules/page-render-mode/package.json
+++ b/packages/modules/page-render-mode/package.json
@@ -23,25 +23,25 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1",
     "@tinkoff/errors": "0.0.0-stub",
-    "@tinkoff/url": "0.0.0-stub"
+    "@tinkoff/url": "0.0.0-stub",
+    "node-fetch": "^2.6.1"
   },
   "peerDependencies": {
-    "@tinkoff/utils": "^2.1.2",
     "@tinkoff/dippy": "0.0.0-stub",
+    "@tinkoff/utils": "^2.1.2",
     "@tramvai/core": "0.0.0-stub",
-    "@tramvai/react": "0.0.0-stub",
-    "@tramvai/papi": "0.0.0-stub",
-    "@tramvai/module-router": "0.0.0-stub",
     "@tramvai/module-client-hints": "0.0.0-stub",
+    "@tramvai/module-router": "0.0.0-stub",
+    "@tramvai/papi": "0.0.0-stub",
+    "@tramvai/react": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-core": "0.0.0-stub",
+    "@tramvai/tokens-metrics": "0.0.0-stub",
     "@tramvai/tokens-render": "0.0.0-stub",
     "@tramvai/tokens-router": "0.0.0-stub",
     "@tramvai/tokens-server": "0.0.0-stub",
     "@tramvai/tokens-server-private": "0.0.0-stub",
-    "@tramvai/tokens-metrics": "0.0.0-stub",
     "prom-client": "^14.2.0",
     "react": ">=16.14.0",
     "tslib": "^2.4.0"
