--- a/packages/libs/module-loader-server/package.json
+++ b/packages/libs/module-loader-server/package.json
@@ -23,6 +23,7 @@
     "@tinkoff/request-plugin-circuit-breaker": "^0.4.0",
     "@tinkoff/request-plugin-protocol-http": "^0.12.1",
     "@tinkoff/utils": "^2.1.2",
+    "minipass": "^3.1.1",
     "ssri": "^7.1.0",
     "tslib": "^2.4.0"
   },
