--- a/packages/modules/react-query/package.json
+++ b/packages/modules/react-query/package.json
@@ -19,13 +19,16 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.7.1",
+    "@tanstack/react-query": ">=4.0.0 <6.0.0",
     "@tinkoff/errors": "0.0.0-stub",
     "@tramvai/safe-strings": "0.0.0-stub",
     "@tramvai/tokens-child-app": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-react-query": "0.0.0-stub",
     "@tramvai/tokens-render": "0.0.0-stub"
+  },
+  "devDependencies": {
+    "@tanstack/react-query": "^5.72.1"
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
