--- a/packages/tokens/react-query/package.json
+++ b/packages/tokens/react-query/package.json
@@ -18,7 +18,10 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.7.1"
+    "@tanstack/react-query": ">=4.0.0 <6.0.0"
+  },
+  "devDependencies": {
+    "@tanstack/react-query": "^5.72.1"
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
