--- a/packages/tramvai/react-query/package.json
+++ b/packages/tramvai/react-query/package.json
@@ -25,7 +25,7 @@
     "@tramvai/tokens-common": "0.0.0-stub"
   },
   "peerDependencies": {
-    "@tanstack/react-query": "^4.7.1",
+    "@tanstack/react-query": ">=4.0.0 <6.0.0",
     "@tinkoff/dippy": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.2",
     "react": ">=16.14.0",
