--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -66,7 +66,7 @@
     "@tinkoff/browserslist-config": "0.0.0-stub",
     "@tinkoff/dippy": "0.0.0-stub",
     "@tinkoff/is-modern-lib": "0.0.0-stub",
-    "@tinkoff/logger": "0.0.0-stub",
+    "@tinkoff/logger": "^0.10.286",
     "@tinkoff/minicss-class-generator": "0.0.0-stub",
     "@tinkoff/package-manager-wrapper": "0.0.0-stub",
     "@tinkoff/request-core": "^0.10.0",
