--- a/packages/tokens/common/package.json
+++ b/packages/tokens/common/package.json
@@ -25,7 +25,7 @@
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
-    "@tinkoff/logger": "0.0.0-stub",
+    "@tinkoff/logger": "^0.10.178",
     "@tramvai/types-actions-state-context": "0.0.0-stub",
     "react": ">=16.8",
     "tslib": "^2.4.0"
