--- a/tools/migrate/package.json
+++ b/tools/migrate/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@tinkoff/logger": "0.0.0-stub",
+    "@tinkoff/logger": "^0.10.178",
     "@tinkoff/package-manager-wrapper": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.2",
     "env-ci": "^5.0.2",
