--- a/examples/assets/project.json
+++ b/examples/assets/project.json
@@ -1,6 +1,6 @@
 {
   "name": "assets",
-  "sourceRoot": "tinkoff-examples/assets/src",
+  "sourceRoot": "examples/assets/src",
   "projectType": "library",
   "targets": {}
 }
