--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -173,6 +173,7 @@
     "webpack-hot-middleware": "^2.26.0",
     "webpack-sources": "^3.2.3",
     "webpack-stats-plugin": "^1.1.3",
+    "webpack-subresource-integrity": "^5.2.0-rc.1",
     "webpackbar": "^5.0.2",
     "workbox-build": "^6.6.1",
     "workbox-webpack-plugin": "^6.6.1",
