--- a/packages/modules/opentelemetry/tsconfig.json
+++ b/packages/modules/opentelemetry/tsconfig.json
@@ -35,6 +35,9 @@
         },
         {
             "path": "../../tokens/router"
+        },
+        {
+            "path": "../../tokens/render"
         }
     ]
 }
