--- a/packages/modules/opentelemetry/package.json
+++ b/packages/modules/opentelemetry/package.json
@@ -32,6 +32,7 @@
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-http-client": "0.0.0-stub",
     "@tramvai/tokens-metrics": "0.0.0-stub",
+    "@tramvai/tokens-render": "0.0.0-stub",
     "@tramvai/tokens-router": "0.0.0-stub",
     "@tramvai/tokens-server": "0.0.0-stub",
     "@tramvai/tokens-server-private": "0.0.0-stub",
